--- a/package.json
+++ b/package.json
@@ -10,30 +10,31 @@
     "preview": "npx vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "clsx": "latest",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "sonner": "^2.0.1",
-    "lucide-react": "^0.441.0",
-    "framer-motion": "^11.5.4",
     "recharts": "^2.12.7",
-    "clsx": "latest",
+    "sonner": "^2.0.1",
     "tailwind-merge": "latest"
   },
   "devDependencies": {
     "@types/node": "^20.11.18",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "latest",
     "eslint": "^8.50.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
-    "typescript": "^5.5.4",
-    "vite": "^5.2.0",
+    "postcss": "latest",
     "tailwindcss": "3.4.17",
-    "autoprefixer": "latest",
-    "postcss": "latest"
+    "typescript": "^5.5.4",
+    "vite": "^5.2.0"
   }
 }
