--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "npx vite preview"
   },
   "dependencies": {
+    "@floating-ui/react-dom-interactions": "^0.13.3",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "axios": "^1.9.0",
