--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@floating-ui/react-dom-interactions": "^0.13.3",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
+    "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "latest",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
