--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@floating-ui/react-dom-interactions": "^0.13.3",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
+    "@vercel/node": "^5.2.1",
     "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
