--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "npx vite",
     "build": "npx vite build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "preview": "npx vite preview"
+    "preview": "npx vite preview",
+    "test:mongodb": "node test-mongodb.js"
   },
   "dependencies": {
     "@floating-ui/react-dom-interactions": "^0.13.3",
@@ -18,8 +19,10 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "latest",
+    "dotenv": "^16.0.3",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.441.0",
+    "mongodb": "^6.16.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
