--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,18 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "devCommand": "npm run dev",
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index"
+    },
+    {
+      "source": "/((?!api).*)",
+      "destination": "/index.html"
+    }
+  ],
   "env": {
     "VITE_API_URL": "/api",
-    "MONGODB_URI": "mongodb://127.0.0.1:27017/telesite",
-    "API_URL": "https://strattera.tgapp.online/api/v1",
-    "API_TOKEN": "8cM9wVBrY3p56k4L1VBpIBwOsw",
     "NODE_ENV": "production"
   }
 } 
