--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "npx vite",
+    "dev:api": "node server.js",
+    "dev:full": "concurrently \"npm run dev\" \"npm run dev:api\"",
     "build": "npx vite build",
+    "start": "node server.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "preview": "npx vite preview",
     "test:mongodb": "node test-mongodb.js"
@@ -19,7 +22,10 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "latest",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.19.2",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.441.0",
     "mongodb": "^6.16.0",
